# interactiveIO

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  GUI_README.md  README.md  VISA_GUIDE.md  build.bat  build_debug.bat  deploy.bat  interactiveIO.sln  package.bat
app/: CMakeLists.txt
app/gui/: connectiondialog.ui  main_gui.cpp  mainwindow.cpp  mainwindow.h
backend/: CMakeLists.txt
backend/core/: ieee4882.cpp  tcpip_connection.cpp  visa_connection.cpp
backend/include/: ieee4882.h  instrument_connection.h  tcpip_connection.h  visa_connection.h
backend/include/platform/: platform_config.h
backend/platform/: dynamic_loader.cpp  socket_wrapper.cpp
cmake/: iio_version.h.in
controller/: CMakeLists.txt  instrument_controller.cpp
controller/include/: instrument_controller.h
frontend/: CMakeLists.txt
frontend/api/: cli_api.cpp  cli_api.h  main_api.cpp  rest_server.cpp  rest_server.h
frontend/console/: main.cpp
frontend/gui/: connectiondialog.cpp  connectiondialog.h  errorhandler.cpp  errorhandler.h  loadingoverlay.cpp  loadingoverlay.h  logcrypto.cpp  logcrypto.h  main_gui.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settingsdialog.cpp  settingsdialog.h  theme.cpp  theme.h
frontend/gui/resources/: app_icon.rc
gui/: connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
include/: tcpip_connection.h  visa_connection.h
include/platform/: dynamic_loader.h  socket_wrapper.h
interactiveIO/: .gitignore  interactiveIO.cpp  interactiveIO.vcxproj  interactiveIO.vcxproj.filters
scripts/: build.bat  build_debug.bat  deploy.bat  package.bat  package.ps1
src/: CMakeLists.txt  main.cpp  tcpip_connection.cpp  visa_connection.cpp
src/core/: visa_connection.cpp
tests/: CMakeLists.txt  README_TESTS.md  test_gui_mainwindow.cpp  test_scpi_connection.cpp  test_scpi_utils.cpp
tests/api/: test_api_serialization.cpp
tests/controller/: test_instrument_controller.cpp
tests/core/: test_ieee4882.cpp  test_visa_connection.cpp
tests/gui/: test_gui_connectiondialog.cpp  test_gui_mainwindow.cpp
